# backend

./: .dockerignore  .env.example  .gitlab-ci.yml  Cargo.toml  README.md  Rocket.toml  build.rs  default.toml  heroku.dockerfile  heroku.yml
README/: arq.md  dev.md  env.md  structure.md  test.md
docker/: Dockerfile  compose.yml  heroku.dockerfile  prod.dockerfile
proto/: items.proto
src/: lib.rs  main.rs
src/config/: mod.rs
src/infra/: config.rs  mod.rs  mongo.rs  state.rs  sync_mongo.rs
src/modules/: mod.rs
src/modules/api/infra/: endpoints.rs
src/modules/auth/: app.rs  domain.rs  infra.rs  mod.rs
src/modules/auth/app/: jwt.rs
src/modules/auth/dtos/: mod.rs
src/modules/auth/infra/: endpoints.rs  errors.rs  facebook.rs  guards.rs  mod.rs  spotify.rs
src/modules/users/: mod.rs
src/modules/users/app/: mod.rs
src/modules/users/domain/: repository.rs
src/modules/users/domain/entities/: mod.rs
src/modules/users/dtos/: mod.rs
src/modules/users/infra/: repo.rs
src/modules/whishlists/: dtos.rs  mod.rs
src/modules/whishlists/app/: collection.rs  item.rs  mod.rs
src/modules/whishlists/domain/: mod.rs  repository.rs
src/modules/whishlists/domain/entities/: collection.rs  item.rs  mod.rs  shared.rs
src/modules/whishlists/dtos/: collection.rs  item.rs  mod.rs
src/modules/whishlists/infra/: endpoints.rs  mod.rs
systemD/: dziro.service  install.sh
tests/: user_user_create.rs  user_user_find.rs  whishlist_collection_create.rs  whishlist_collection_delete.rs  whishlist_collection_list.rs  whishlist_collection_update.rs  whishlist_create.rs  whishlist_delete.rs  whishlist_item_create.rs  whishlist_item_delete.rs  whishlist_item_update.rs  whishlist_list.rs  whishlist_update.rs  whishlists.rs
utils/: Insomnia_2022-11-28.json  Insomnia_2022-12-14.json  queires.mongodb  version.sh
(+7 files in other folders)
