[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.18.2"
async-trait = "0.1.53"
serde = { version = "1.0.137",  features = ["derive"] }
serde_json = "1.0.81"
validator = { version = "0.15.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1"
chrono = "0.4.19"

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]