[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = "1.18.2"
async-trait = "0.1.53"
serde_json = "1.0.81"
lazy_static = "1.4.0"
chrono = "0.4.19"
regex = "1"
jsonwebtoken = "8.1.0"
base64 = "0.13.0"
rocket =  { version = "0.5.0-rc.1", features=["json"]}
rocket_cors = "0.6.0-alpha1"

[dependencies.serde]
version = "1.0.137"
features = ["derive"] 

[dependencies.validator]
version = "0.15.0"
features = ["derive"] 

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.reqwest]
version = "0.11.10"
features = ["json"]